# tiny

./: CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt
source/cmake/: build_esp8266.sh  build_linux_arm.sh  build_linux_x86.sh  build_macos.sh  build_openwrt_mt7688.sh  esp8266_xtensa-lx106.cmake  freertos_esp32_xtensa-esp32-elf.cmake  freertos_esp8266_xtensa-lx106.cmake  linux_arm.cmake  linux_x86.cmake  macos.cmake  openwrt_mt7688.cmake  windows_x86.cmake
source/src/: CMakeLists.txt
source/src/Bson/: BsonArray.c  BsonArray.h  BsonObject.c  BsonObject.h  BsonValue.c  BsonValue.h  CMakeLists.txt  bson.c  bson.h
source/src/Bson/codec/: BsonDecoder.c  BsonDecoder.h  BsonEncoder.c  BsonEncoder.h  StringEncoder.c  StringEncoder.h
source/src/Bson/test/: CMakeLists.txt  test_bson_decode.c  test_bson_encode.c
source/src/Bson/value/: BsonBinary.c  BsonBinary.h  BsonBoolean.c  BsonBoolean.h  BsonCstring.c  BsonCstring.h  BsonDateTime.c  BsonDateTime.h  BsonDecimal128.c  BsonDecimal128.h  BsonFloatingPoint.c  BsonFloatingPoint.h  BsonInt32.c  BsonInt32.h  BsonInt64.c  BsonInt64.h  BsonJavascriptCode.c  BsonJavascriptCode.h  BsonJavascriptCodeScope.c  BsonJavascriptCodeScope.h  BsonMaxKey.c  BsonMaxKey.h  BsonMinKey.c  BsonMinKey.h  BsonNumber.c  BsonNumber.h  BsonString.c  BsonString.h  BsonTimestamp.c  BsonTimestamp.h
source/src/ByteBuffer/: ByteBuffer.c  ByteBuffer.h  CMakeLists.txt
source/src/HttpClient/: CMakeLists.txt  HttpClient.c  HttpClient.h  HttpClientHandler.c  HttpClientHandler.h  HttpExchange.c  HttpExchange.h  WsClientHandler.h
source/src/HttpClient/example/: CMakeLists.txt  example_http_get.c  example_http_post.c
source/src/Json/: CMakeLists.txt  Json.c  Json.h  JsonArray.c  JsonArray.h  JsonBoolean.h  JsonDefinitions.c  JsonDefinitions.h  JsonNumber.c  JsonNumber.h  JsonObject.c  JsonObject.h  JsonString.c  JsonToken.h  JsonTokenizer.c  JsonTokenizer.h  JsonValue.c  JsonValue.h
source/src/Json/codec/: JsonDecoder.c  JsonDecoder.h  JsonDecoderCompact.c  JsonDecoderCompact.h  JsonEncoder.c  JsonEncoder.h  JsonToken.c  JsonToken.h  JsonTokenizer.c  JsonTokenizer.h
source/src/Json/test/: CMakeLists.txt  test_json_decode.c  test_json_decoder.c  test_json_encode.c  (+2 more)
source/src/Netty/: CMakeLists.txt
source/src/StringArray/: CMakeLists.txt  StringArray.c  StringArray.h
source/src/TcpClient/: CMakeLists.txt  TcpClient.c  TcpClient.h  TcpClientHandler.c  TcpClientHandler.h  TcpExchange.c  TcpExchange.h
source/src/TinyBase/: tiny_api.h  tiny_ret.c  tiny_ret.h  tiny_typedef.h
source/src/TinyBuffer/: CMakeLists.txt  TinyBuffer.c  TinyBuffer.h
source/src/TinyContainer/: CMakeLists.txt  TinyList.c  TinyList.h  TinyMap.c  TinyMap.h  TinyMapItem.c  TinyMapItem.h  TinyQueue.c  TinyQueue.h
source/src/TinyJson/: json.c  json.h
source/src/TinyLog/: CMakeLists.txt  tiny_log.c  tiny_log.h  tiny_log_binary.c  tiny_log_binary.h  tiny_log_print.c  tiny_log_print.h  tiny_print_binary.c
source/src/TinyPortable/: CMakeLists.txt  tiny_inet.h  tiny_inline.h  tiny_lor.h  tiny_malloc.c  tiny_malloc.h  tiny_snprintf.h  tiny_socket.c  tiny_socket.h  tiny_socket_linux.c  tiny_socket_linux.h  tiny_socket_lwip.c  tiny_socket_lwip.h  tiny_socket_windows.c  tiny_socket_windows.h  tiny_strdup.c  tiny_time.c  tiny_time.h  tiny_time_esp.c  tiny_time_linux.c  tiny_time_windows.c
source/src/TinyPorting/: tiny_print_mem.h  tiny_sleep.h
source/src/TinyRandom/: CMakeLists.txt  tiny_random.c  tiny_random.h
source/src/TinyStringUtil/: CMakeLists.txt  tiny_buffer_append.c  tiny_buffer_append.h  tiny_char_util.c  tiny_char_util.h  tiny_str_equal.c  tiny_str_equal.h  tiny_str_get_value.c  tiny_str_get_value.h  tiny_str_split.c  tiny_str_split.h  tiny_strnlen.c  tiny_strnlen.h  tiny_url_split.c  tiny_url_split.h
source/src/TinyThread/: TinyCondition.c  TinyCondition.h  TinyMutex.c  TinyMutex.h  TinySemaphore.c  TinySemaphore.h  TinyThread.c  TinyThread.h
source/src/TinyUmm/: umm_malloc_cfg.h
source/src/TinyUuid/: TinyUuid.c
source/src/TinyWorker/: CMakeLists.txt  TinyBlockingQueue.h  TinyWorker.h
source/src/WebSocketClient/: CMakeLists.txt  WebSocketClient.c  WebSocketClient.h  WebSocketClientHandler.c  WebSocketClientHandler.h  WebSocketFrame.h
src/: CMakeLists.txt
src/Netty/: CMakeLists.txt
src/Netty/ByteBuf/: byte_buf.c
src/Netty/bootstrap/: Bootstrap.c
src/Netty/channel/: Channel.c  Channel.h  ChannelHandler.h  ChannelIdleStateHandler.c  SocketChannel.c
src/Netty/codec-http/: HttpContent.c
src/Netty/example-httpserver/: CMakeLists.txt
src/Netty/example-ssdp/: CMakeLists.txt  ExampleSsdpHandler.c
src/Netty/example-timer/: CMakeLists.txt
src/Netty/selector/: Selector.c  Selector.h
src/Netty/test/: CMakeLists.txt
src/Netty/timer/: Timer.c
src/TinyBase/: CMakeLists.txt  tiny_ret.c
src/TinyContainer/: CMakeLists.txt  TinyList.c  TinyQueue.h
src/TinyContainer/test/: CMakeLists.txt  test.c
src/TinyJson/: CMakeLists.txt  json.h
src/TinyLog/: tiny_log_binary.c  tiny_log_print.c
src/TinyMd5/: CMakeLists.txt  tiny_md5.c  tiny_md5.h
src/TinyPortable/: tiny_inet.h  tiny_malloc.h  tiny_socket.h  tiny_socket_linux.h  tiny_socket_windows.h  tiny_strdup.h  tiny_time.c  tiny_time.h  tiny_time_esp.c  tiny_time_linux.c  tiny_time_windows.c
src/TinyStringUtil/: CMakeLists.txt  tiny_char_util.c  tiny_str_equal.h  tiny_str_split.h  tiny_url_split.c  tiny_url_split.h
src/TinyThread/: CMakeLists.txt  TinyMutex.h  TinySemaphore.c  TinySemaphore.h
src/TinyThread/test/: CMakeLists.txt
src/TinyUmm/: CMakeLists.txt  umm_malloc.c  umm_malloc.h
src/TinyUmm/test/: CMakeLists.txt
src/TinyUuid/: CMakeLists.txt  TinyUuid.c  TinyUuid.h
src/TinyWorker/: TinyBlockingQueue.c  TinyWorker.c
src/miot/: CMakeLists.txt  LibMd5.c  LibMd5.h  LibSha1.h  LibSha256.h  aes.c  aes.h  aes256.h  cdecode.c  cdecode.h  cencode.c  cencode.h  miio.h  miio_util.c  miio_util.h  miot.c  miot.h  ot_cloud.c  ot_cloud.h  ot_handler.c  ot_handler.h  ot_packet.c  ot_packet.h  ot_packet_handler.c  ot_packet_handler.h
src/miot/test/: CMakeLists.txt  test_miot.c
(+233 files in other folders)
