#-----------------------------------------------------------------------------
#
# build
#
#-----------------------------------------------------------------------------

ADD_SUBDIRECTORY(TinyPortable)
ADD_SUBDIRECTORY(TinyBase)
ADD_SUBDIRECTORY(TinyContainer)
ADD_SUBDIRECTORY(TinyLog)
ADD_SUBDIRECTORY(TinyUmm)
ADD_SUBDIRECTORY(TinyStringUtil)
#ADD_SUBDIRECTORY(TinyThread)
ADD_SUBDIRECTORY(TinyJson)
ADD_SUBDIRECTORY(TinyMd5)
ADD_SUBDIRECTORY(TinyUuid)
#ADD_SUBDIRECTORY(TinyWorker)
ADD_SUBDIRECTORY(Netty)
ADD_SUBDIRECTORY(miot)
