#-----------------------------------------------------------------------------
#
# build
#
#-----------------------------------------------------------------------------

ADD_SUBDIRECTORY(TinyBase)
ADD_SUBDIRECTORY(TinyPortable)
ADD_SUBDIRECTORY(TinyContainer)
ADD_SUBDIRECTORY(TinyLog)
ADD_SUBDIRECTORY(TinyStringUtil)
ADD_SUBDIRECTORY(TinyJson)
ADD_SUBDIRECTORY(Netty)
ADD_SUBDIRECTORY(Bson)
#ADD_SUBDIRECTORY(TinyUmm)
#ADD_SUBDIRECTORY(TinyMd5)
#ADD_SUBDIRECTORY(TinyThread)
#ADD_SUBDIRECTORY(TinyUuid)
#ADD_SUBDIRECTORY(TinyWorker)
