#-----------------------------------------------------------------------------
#
# build
#
#-----------------------------------------------------------------------------

ADD_SUBDIRECTORY(TinyBase)
ADD_SUBDIRECTORY(TinyPortable)
ADD_SUBDIRECTORY(TinyContainer)
ADD_SUBDIRECTORY(TinyLog)
ADD_SUBDIRECTORY(TinyStringUtil)
ADD_SUBDIRECTORY(TinyRandom)
ADD_SUBDIRECTORY(TinyBuffer)
ADD_SUBDIRECTORY(StringArray)
ADD_SUBDIRECTORY(Json)
ADD_SUBDIRECTORY(Netty)
ADD_SUBDIRECTORY(HttpClient)
ADD_SUBDIRECTORY(TcpClient)

#ADD_SUBDIRECTORY(Bson)
#ADD_SUBDIRECTORY(TinyUmm)
#ADD_SUBDIRECTORY(TinyMd5)
#ADD_SUBDIRECTORY(TinyThread)
#ADD_SUBDIRECTORY(TinyUuid)
#ADD_SUBDIRECTORY(TinyWorker)
